Changes for qnx/photon platform only. They should not affect building/runtime other platforms.

Bug 240827
Fixed the fd( pipe ) leakeage related to event queues, due to improper handling in nsAppShell for our platform.

Also changes for nsFilePicker and nsSound due to changes to nsIFilePicker, nsISound.